--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -17,10 +17,11 @@
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-checkbox-tree": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.0",
     "react-swipeable": "^6.2.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
