--- a/main-app/public/manifest.json
+++ b/main-app/public/manifest.json
@@ -1,12 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Shoppig",
+  "name": "shopping app",
   "icons": [
-    {
-      "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
     {
       "src": "favicon.png",
       "type": "image/png",
