--- a/main-app/public/manifest.json
+++ b/main-app/public/manifest.json
@@ -1,19 +1,16 @@
 {
-  "short_name": "Shoppig",
-  "name": "shopping app",
+  "short_name": "Shopping",
+  "name": "shopping",
   "icons": [
-    {
-      "src": "favicon.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
+
+    
     {
       "src": "favicon.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
