--- a/main-app/package.json
+++ b/main-app/package.json
@@ -2,6 +2,7 @@
   "name": "main-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.100.71:4444",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
